...
    }
    
    func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
        let uiPasteboard = UIPasteboard.general
        uiPasteboard.string = calculationHistory[indexPath.row].result
        
        let alert = UIAlertController(title: "Copied to clipboard", message: "\(calculationHistory[indexPath.row].result) has been added to your clipboard.", preferredStyle: .alert)
        
        present(alert, animated: true) {
            tableView.deselectRow(at: indexPath, animated: true)
            DispatchQueue.main.asyncAfter(deadline: .now() + 1.5) {
                alert.dismiss(animated: true, completion: nil)
            }
...
